--- a/style1.css
+++ b/style1.css
@@ -75,39 +75,148 @@ text-decoration: underline;
  }
  .footer-section
  {
-    padding: 20px 40px;
+    padding: 0 40px;
  }
- .footer-section  .footer
+ .footer-section
  {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 20px;
+    padding: 0 40px;
  }
+
+ hr
+ {
+ padding: 2px 4px;   
+ border: 1px solid #2b2929;
+ outline: 0; 
+ background-color: #312f2f;
+}
+.copyright
+{
+ padding: 0 50px;   
+ color: #969393;
+ font-size: 15px;
+ margin-bottom: 30px;
+}
+
+.footer-section
+{
+ padding: 20px 40px;
+}
+.footer-section .footer
+{
+ display: flex;   
+ padding: space-between;
+ margin: 20px;
+}
+.footer-section .footer .footer-links
+{
+ display: flex;   
+ padding: space-between;
+ gap: 50px;
+}
+.footer-section .footer .footer-links .footer-columns
+{
  
- .footer-section  .footer .footer-links
- {
-    display: flex;
-    justify-content: space-between;
-    gap: 50px;
- }
- .footer-section>.footer>.footer-links>div
- {
-    color: #fff;
+    margin: 0 12px;
+}
+.footer-section .footer .footer-links .footer-columns div
+{
     font-weight: 600;
-    margin-bottom: 12px;
-    font-size: 10px;
- }
- .footer-section .footer .footer-links  ul li
- {
+    font-size: 15px;
+    color: #fff;
+    margin: 0 1px;
+}
+.footer-section .footer .footer-links .footer-columns ul li
+{
+   
     list-style: none;
-    margin: 6px 0;
- }
- .footer-section .footer .footer-links  ul li a
- {
+    margin: 8px 0;
+
+}
+.footer-section .footer .footer-links .footer-columns ul li a
+{
     text-decoration: none;
-    color: #6b6161;
-    font-size: 14px;
+    color: #969393;
+    font-size: 16px;
     cursor: pointer;
- }
- 
- 
+}
+.footer-section .footer .footer-links .footer-columns ul li a:hover
+{
+    text-decoration: underline;
+    color: #fff; 
+}
+.footer .social-links i
+{
+    color: white;
+    background-color: #312f2f;
+    padding: 15px;
+    border-radius: 50%;
+    margin: 5px;
+    cursor: pointer;
+    font-size: 20px;
+   
+}
+.footer .social-links div
+{
+   justify-content: 
+   
+}
+.footer .social-links i:hover
+{
+   
+    background-color: #615f5f;
+    
+}
+hr
+{
+margin: 20px 40px;
+background: #272628;
+border: 1px  solid #292828;
+}
+.copyright
+{
+    padding: 0 40px;
+    color: #969393;
+    font-size: 15px;
+    margin-bottom: 30px;
+}
+.preview
+{
+    display: flex;
+    justify-content: space-between;
+    background: linear-gradient(to right,purple,rgb(30, 173, 220));
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    padding: 12px 40px;
+}
+.preview h4
+{
+    font-size: 16px;
+    font-weight: 600;
+    margin-bottom: 10px;
+    color: #fff;
+}
+.preview p
+{
+ font-size: 16px;
+ font-weight: 400;
+ color: #fff;
+}
+.preview button
+{
+ padding: 12px 30px;
+ border-radius: 20px;
+ font-size: 14px;
+ font-weight: 600;
+ color: black;
+}
+.social-links 
+{
+  margin-left: 500px;
+  display: inline;
+}
+.social-links i
+{
+ gap: 10px;
+}
